--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <title>PreguntadOrt</title>
 </head>
 <body class="index">
-    <a href="config.html"><img src="imgs/config.png" alt="configuración" class="config"></a>
+    <div class="tlicon">
+        <a href="config.html" class="config"><img src="imgs/config.png" alt="configuración" class="tlicon"></a>
+    </div>
     <h1 class="title">PreguntadOrt</h1>
     <img src="imgs/logo.png" alt="logo" class="logo">
     <ul class="menu">
@@ -19,6 +21,12 @@
         <li><a href="crear.html">Crear Pregunta</a></li>
         <li><a href="creditos.html">Créditos</a></li>
     </ul>
+   
+        <div class="tlicon">
+            <div class="content">
+                <a href="config.html"><p>Configura tu juego</p></a>
+            </div>
+        </div>
     <footer class="footer_inv">
 
     </footer>
