--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 <body class="index">
     <div class="tlicon">
-        <a href="config.html" class="config"><img src="imgs/config.png" alt="configuración" class="tlicon"></a>
+        <a href="config.html"><img src="imgs/config.png" alt="configuración" class="tlicon"></a>
     </div>
     <h1 class="title">PreguntadOrt</h1>
     <img src="imgs/logo.png" alt="logo" class="logo">
     <ul class="menu">
         <li><a href="jugar.html">Jugar</a></li>
-        <li><a href="crear.html">Crear Pregunta</a></li>
+        <li><a href="crearpregunta.html">Crear Pregunta</a></li>
         <li><a href="creditos.html">Créditos</a></li>
     </ul>
    
