--- a/config.html
+++ b/config.html
@@ -10,13 +10,13 @@
 </head>
 <body class="config">
     <a href="index.html"><img src="imgs/cruz.png" alt="salir" class="tlicon"></a>
-    <form action="" class="configform">
+    <form action="index.html" class="configform">
         <div class="container">
-            <h1>Nombre de Usuario</h1>
+            <h1 class="subtitle">Nombre de Usuario</h1>
             <input type="text" placeholder="Nombre" required>
         </div>
         <div class="container">
-            <h1>Categorías</h1>
+            <h1 class="subtitle">Categorías</h1>
             <div class="line">
                 <input type="radio" name="cat" id="Arte" value="1" required>
                 <label for="Arte">Arte</label>
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="container">
-            <h1>Dificultad</h1>
+            <h1 class="subtitle">Dificultad</h1>
             <div class="line">
                 <input type="radio" name="dif" id="Facil" value="1">
                 <label for="Facil">Facil</label>
