--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@700&display=swap" rel="stylesheet">
     <title>PreguntadOrt</title>
 </head>
 <body class="index">
@@ -24,7 +21,7 @@
    
         <div class="tlicon">
             <div class="content">
-                <a href="config.html"><p>Configura tu juego</p></a>
+                <a href="config.html"><p class="tooltiptext">Configura tu juego</p></a>
             </div>
         </div>
     <footer class="footer_inv">
