--- a/creditos.html
+++ b/creditos.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Creditos PreguntadOrt</title>
 </head>
-<body>
-    
+<body class="creditos">
+    <a href="index.html"><img src="imgs/cruz.png" alt="salir" class="tlicon"></a>
+    <div class="card">
+        <img src="JFProfile." alt="Profile" class="Perfil">
+    </div>
+    <div class="card">
+        <img src="MSProfile.jpg" alt="Profile" class="Perfil">
+
+    </div>
 </body>
 </html>
