--- a/config.html
+++ b/config.html
@@ -10,7 +10,7 @@
 </head>
 <body class="config">
     <a href="index.html"><img src="imgs/cruz.png" alt="salir" class="tlicon"></a>
-    <form action="index.html" class="configform">
+    <form action="index.html" class="form_sparound">
         <div class="container">
             <h1 class="subtitle">Nombre de Usuario</h1>
             <input type="text" placeholder="Nombre" required>
