--- a/jugar.html
+++ b/jugar.html
@@ -16,7 +16,7 @@
     <div class="column">
         <h1 class="subtitle" id="enunciado">Que color es?</h1>
         <img src="imgs/amarillo.png" alt="Pregunta" class="imgpregunta">
-        <form action="index.html" class="respuestas">
+        <form action="Fin.html" class="respuestas">
             <div class="lineres">
                 <button type="radio" value="1" class="res" name="res" id="res1">Rojo</button>
                 <button type="radio" value="2" class="res" name="res" id="res2">Azul</button>
