--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body class="index">
     <div class="tlicon">
-        <a href="config.html"><img src="imgs/config.png" alt="configuración" class="tlicon"></a>
+        <a href="ConfigurarJuego.html"><img src="imgs/config.png" alt="configuración" class="tlicon"></a>
     </div>
     <h1 class="title">PreguntadOrt</h1>
     <img src="imgs/logo.png" alt="logo" class="logo">
     <ul class="menu">
-        <li><a href="jugar.html">Jugar</a></li>
-        <li><a href="crearpregunta.html">Crear Pregunta</a></li>
-        <li><a href="creditos.html">Créditos</a></li>
+        <li><a href="Jugar.html">Jugar</a></li>
+        <li><a href="CrearPregunta.html">Crear Pregunta</a></li>
+        <li><a href="Creditos.html">Créditos</a></li>
     </ul>
    
         <div class="tlicon">
             <div class="content">
-                <a href="config.html"><p class="tooltiptext">Configura tu juego</p></a>
+                <a href="ConfigurarJuego.html"><p class="tooltiptext">Configura tu juego</p></a>
             </div>
         </div>
     <footer class="footer_inv">
