--- a/Fin.html
+++ b/Fin.html
@@ -10,7 +10,7 @@
 <body class="fin">
     <h1 class="title">FIN DEL JUEGO</h1>
     <h1 class="subtitle">Respondiste correctamente el:</h3>
-    <h1 class="title">80%</h1>
+    <h1 class="title" id="porcentaje">80%</h1>
     <h1 class="subtitle">de las preguntas</h3>
 
     <a href="index.html" class="volver">
