--- a/creditos.html
+++ b/creditos.html
@@ -8,13 +8,16 @@
     <title>Creditos PreguntadOrt</title>
 </head>
 <body class="creditos">
+    <div class="cardleft">
+        <img src="imgs/JFProfile.jpg" alt="imagen" class="profile">
+        <h2>Julian Furland Otero</h2>
+        <a href="https://binkersito.netlify.app"><img src="imgs/logoLinkedin.png" alt="Linkedin" class="redessociales"></a>
+    </div>
+    <div class="cardright">
+        <img src="imgs/MSProfile.jpeg" alt="imagen" class="profile">
+        <h2 class="righth2">Maximiliano Sher</h2>
+        <a href="https://binkersito.netlify.app"><img src="imgs/logoLinkedin.png" alt="Linkedin" class="redessociales"></a>
+    </div>
     <a href="index.html"><img src="imgs/cruz.png" alt="salir" class="tlicon"></a>
-    <div class="card">
-        <img src="JFProfile." alt="Profile" class="Perfil">
-    </div>
-    <div class="card">
-        <img src="MSProfile.jpg" alt="Profile" class="Perfil">
-
-    </div>
 </body>
 </html>
